--- a/Exercises/00-Count with Python/00-Count-with-Python-exercise.ipynb
+++ b/Exercises/00-Count with Python/00-Count-with-Python-exercise.ipynb
@@ -93,8 +93,8 @@
    "source": [
     "import math\n",
     "\n",
-    "a = 3 #cathetus a\n",
-    "b = 4 #cathetus b\n",
+    "a = 3\n",
+    "b = 4 \n",
     "c = math.sqrt(a**2 + b**2) #formula to derive hypothenuse from catheti\n",
     "print(f\"The hypothenuse is {c}\")"
    ]
@@ -139,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The system has 83.33% accuracy\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -250,9 +258,9 @@
     "fp = 2\n",
     "fn = 11\n",
     "\n",
-    "accuracy = ((tp + tn) / (tp + tn + fp + fn)*100) #Divides the total of the true values and total \n",
+    "accuracy = ((tp + tn) / (tp + tn + fp + fn)*100)\n",
     "print (f\"The accuracy is {accuracy}%\")\n",
-    "#Now we write different messages for different outcomes, including incorrect values\n",
+    "#We write different messages for different outcomes, including incorrect values\n",
     "if (accuracy < 90):\n",
     "    print(\"accuracy too low, this system is not accurate\")\n",
     "elif (accuracy > 100 or accuracy < 0):\n",
