--- a/Exercises/01-If-Statement/01-if-statement-exercise.ipynb
+++ b/Exercises/01-If-Statement/01-if-statement-exercise.ipynb
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "try: #We'll try to catch invalid inputs so that the program won't crash\n",
+    "try:\n",
     "    number = int(input (\"Please input a number\"))\n",
     "    if(number == 0):#We first check if the number is 0\n",
     "        print (f\"The number is 0\")\n",
@@ -66,7 +66,7 @@
     "        print (f\"The number {number} is positive.\")\n",
     "    else: #if not equal or larger than 0, the number is negative\n",
     "        print(f\"The number {number} is negative.\")\n",
-    "except ValueError: #If an invalid input is entered, we'll receive this message\n",
+    "except ValueError:\n",
     "    print (\"That was not a valid number, please try again\")\n"
    ]
   },
@@ -209,6 +209,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Take 1/2 - 1 pills a day\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    age = int(input(\"Please type the patient's age.\"))\n",
+    "    weight = int(input(\"Please type the patient's weight in kg.\"))\n",
+    "    if age > 12 or weight > 40:\n",
+    "        print (\"Take 1-2 pills a day\")\n",
+    "    elif 25 < weight < 40 or 25 < weight < 40 and 7 < age < 13:\n",
+    "        print (\"Take 1/2 - 1 pills a day\")\n",
+    "    elif 3 < age < 7 and 15 < weight < 26:\n",
+    "        print (\"Take 1/2 pill a day\")\n",
+    "    else: print (\"The patient is not fit for this treatment, please consult your doctor!\")\n",
+    "except: ValueError"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,6 +247,22 @@
     "  <li>is divisible by 5</li>\n",
     "  <li>is divisble by 5 and odd</li>\n",
     "</ol> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input(\"Please input a number\"))\n",
+    "if num %2 == 0:\n",
+    "    if num %5 ==0:\n",
+    "        print (f\"Number {num} is even and divisible by 5.\")\n",
+    "    else: print (f\"Number {num} is even but not divisible by 5.\")\n",
+    "elif num %5 == 0:\n",
+    "    print (f\"Number {num} is odd and divisible by 5.\")\n",
+    "else: print (f\"Number {num} is odd and not divisible by 5.\")"
    ]
   },
   {
