Markdowns polished, Readme file updated

--- a/Exercises/01-If-Statement/01-if-statement-exercise.ipynb
+++ b/Exercises/01-If-Statement/01-if-statement-exercise.ipynb
@@ -41,12 +41,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution\n",
+    "\n",
+    "- Check if the number is ***positive***\n",
+    "- Check if the number is ***negative***\n",
+    "- Check if the number is ***0***\n",
+    "- Check if the number is ***invalid***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +88,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Check which number is the *smallest* by subtracting the two.\n",
+    "- If the result of the subtraction is **0**, then the numbers are *equal*"
    ]
   },
   {
@@ -129,19 +142,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Check if the angles make a ***triangle*** by adding them together.\n",
+    "- If the sum of the angles is equal to ***180***, then the angles make a triangle\n",
+    "- Check if any of the angles is equal to **90** degrees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The angles given do not make a triangle.\n"
+      "This is a triangle!\n",
+      "The angle 'a' is a right angle\n"
      ]
     }
    ],
@@ -153,7 +176,7 @@
     "\n",
     "    if a+b+c == 180:\n",
     "        print(\"This is a triangle!\")\n",
-    "        if a == 90: print(\"The angle 'a' is a right angle\")\n",
+    "        if a or b or c == 90: print(\"The angle 'a' is a right angle\")\n",
     "        elif b == 90: print(\"The angle 'b' is a right angle\")\n",
     "        elif c == 90: print(\"The angle 'c' is a right angle\")\n",
     "    else: print (\"The angles given do not make a triangle.\")\n",
@@ -209,6 +232,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Checks the **age** and **weight** of the patient.\n",
+    "- Takes in consideration the **age**, checking first whether the patient is an *adult*.\n",
+    "- If the patient is a *child*, it considers the **weight** before **age**, as requested.\n",
+    "- If the patient's **age** or **weight** are smaller than the minimum, it will send an *alternative message*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -250,10 +290,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Solution:\n",
+    "\n",
+    "- First check if the number is **even** or **odd** by checking the modulo 2.\n",
+    "- Then check modulo 5 in either case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 10 is even and divisible by 5.\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Please input a number\"))\n",
     "if num %2 == 0:\n",
@@ -277,6 +335,62 @@
     "- dimensions: 55x40x23cm (length x width x height) \n",
     "\n",
     "Let the user input weight, length, width and height of the luggage. The program should check if the luggage is allowed or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:\n",
+    "\n",
+    "- We first take all the luggage measurements.\n",
+    "- Then we add all the dimensions in a list, so we can sort them from **larger** to **smaller**.\n",
+    "- This because, the sizes don't necessarily need to match their description (55 doesn't necessarily need to be the maximum length, it might be any of the 3 dimensions).\n",
+    "- We create two states: **\"too_big\"** and **\"too_heavy\"**\n",
+    "- For **\"too_big\"** to be *True* the dimensions will be compared to the limits.\n",
+    "- We'll do the same for **\"too_heavy\"** \n",
+    "- I did this to make the application *user friendly*.\n",
+    "- Now the user will know if their luggage is too large and/or too heavy.\n",
+    "- In case it is only too heavy, it will tell how much weight the user needs to remove to be allowed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The luggage is too heavy. Please remove  1.50kg.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    weight = float(input(\"Please input the weight of the luggage in kg\"))\n",
+    "    length = float(input(\"Please enter the length of the luggage in cm\"))\n",
+    "    width = float(input(\"Please enter the width of the luggage in cm\"))\n",
+    "    height = float(input(\"Please enter the height of the luggage in cm\"))\n",
+    "    max0 = 55\n",
+    "    max1 = 40\n",
+    "    max2 = 23\n",
+    "    maxweight = 8.0\n",
+    "    dims = [length, width, height]\n",
+    "    dims.sort(reverse=True) #This will order the sizes from bigger to smaller\n",
+    "\n",
+    "\n",
+    "    too_big = dims[0] > max0 or dims [1] > max1 or dims[2] > max2\n",
+    "    too_heavy = weight > maxweight\n",
+    "\n",
+    "    if too_big and too_heavy:\n",
+    "        print (\"The luggage is too big and too heavy.\")\n",
+    "    elif too_big: print (\"The luggage is too big.\")\n",
+    "    elif too_heavy: print (f\"The luggage is too heavy. Please remove {(weight - maxweight):.2f} kg.\")\n",
+    "    else: print (\"The luggage can be boarded! Have a nice journey!\")\n",
+    "except ValueError:\n",
+    "    print (\"Enter a valid number\")"
    ]
   },
   {
