Tests folder added to store Python files

--- a/Exercises/00-Count with Python/00-Count-with-Python-exercise.ipynb
+++ b/Exercises/00-Count with Python/00-Count-with-Python-exercise.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 a"
+    "### **Solution** _1a_"
    ]
   },
   {
@@ -103,14 +103,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1 b"
+    "### **Solution** _1b_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*obs.* I used the form **{int(a*100)/100}** to shorten the result because **{(a):.2f}** would round it up to 4.90, and I wanted the result to match exactly the solution given."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 'a' cathetus is  4.89\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -134,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution:"
    ]
   },
   {
@@ -242,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution:"
    ]
   },
   {
@@ -312,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution:"
    ]
   },
   {
@@ -378,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution"
    ]
   },
   {
@@ -438,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution"
+    "### Solution"
    ]
   },
   {
