--- a/Exercises/00-Count with Python/00-Count-with-Python-exercise.ipynb
+++ b/Exercises/00-Count with Python/00-Count-with-Python-exercise.ipynb
@@ -34,48 +34,7 @@
     "\n",
     "&nbsp; a) &nbsp;  A right angled triangle has the catheti: a = 3 and b = 4 length units. Compute the <b>hypothenuse</b> of the triangle. (*) \n",
     "  \n",
-    "&nbsp; b) &nbsp;  A right angled triangle has hypothenuse c = 7.0 and a cathetus a = 5.0 length units. Compute the other cathetus and round to one decimal. (*)\n",
-    "\n",
-    "<img align=\"left\" src=\"../assets/right-angle-triangle.png\" width=\"200\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<details>\n",
-    "\n",
-    "<summary>Hint</summary>\n",
-    "\n",
-    "[Video lecture][pythagoras_video] (swedish)\n",
-    "\n",
-    "[pythagoras_video]: https://www.youtube.com/watch?v=3iivEnKEJ88\n",
-    "\n",
-    "To do square root in Python\n",
-    "```python \n",
-    "import math\n",
-    "math.sqrt()\n",
-    "```\n",
-    "\n",
-    "</details>\n",
-    "<br>\n",
-    "<details>\n",
-    "\n",
-    "<summary>Answer</summary>\n",
-    "a) \n",
-    "\n",
-    "```\n",
-    "The hypothenuse is 5 length units\n",
-    "```\n",
-    "\n",
-    "b)\n",
-    "\n",
-    "```\n",
-    "The other cathetus is 4.9 length units\n",
-    "```\n",
-    "\n",
-    "</details>"
+    "&nbsp; b) &nbsp;  A right angled triangle has hypothenuse c = 7.0 and a cathetus a = 5.0 length units. Compute the other cathetus and round to one decimal. (*)\n"
    ]
   },
   {
@@ -83,6 +42,13 @@
    "metadata": {},
    "source": [
     "### **Solution** _1a_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- In this exercise I will calculate the **hypothenuse** of the triangle using the value of it **catheti**."
    ]
   },
   {
@@ -110,7 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*obs.* I used the form **{int(a*100)/100}** to shorten the result because **{(a):.2f}** would round it up to 4.90, and I wanted the result to match exactly the solution given."
+    "- In this version instead I'll calculate the *a* **cathetus** from the **hypothenuse** and the *b* **cathetus**\n",
+    "\n",
+    "*obs. I used the form* **{int(a*100)/100}** *to shorten the result because* **{(a):.2f}** *would round it up to 4.90, and I wanted the result to match exactly the solution given.*"
    ]
   },
   {
@@ -149,12 +117,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solution:"
+    "### Solution:\n",
+    "\n",
+    "By dividing the correct *predictions* and the *total*, we can calculate an **accuracy** ratio\n",
+    "Then we convert the ratio into *percentage* by multiplying it by 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171,8 +142,7 @@
     "#I made a generic version to take any input instead of having constants\n",
     "predictions=float (input(f\"Input amount of predictions\"))\n",
     "correct=float (input(f\"input amount of correct predictions\"))\n",
-    "#By dividing the correct predictions and the total, we can calculate an accuracy ratio\n",
-    "#Then we convert the ratio into percentage by multiplying it by 100\n",
+    "\n",
     "accuracy=round((correct / predictions)*100, 2)\n",
     "print (f\"The system has {accuracy}% accuracy\")"
    ]
@@ -233,24 +203,7 @@
     "$\\text{accuracy} = \\frac{TP+TN}{TP+TN+FP+FN}$\n",
     "\n",
     "Is this a good model?\n",
-    "\n",
-    "<details> \n",
-    "\n",
-    "<summary>Hint </summary>\n",
-    "\n",
-    "Try to understand what it means for the actual user with each category\n",
-    "\n",
-    "</details>\n",
-    "<br>\n",
-    "<details> \n",
-    "\n",
-    "<summary>Answer </summary>\n",
-    "\n",
-    "```\n",
-    "The accuracy of this model is 0.987.\n",
-    "```\n",
-    "\n",
-    "</details>"
+    "\n"
    ]
   },
   {
@@ -264,7 +217,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy is 98.7%\n",
+      "The system is accurate\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -289,38 +251,7 @@
    "source": [
     "--- \n",
     "## 4. Line (*)\n",
-    "Compute the slope $k$ and the constant term $m$ of this line using the points $A: (4,4)$ and $B: (0,1)$.  \n",
-    "\n",
-    "<img align=\"left\" src=\"../assets/line.png\" width=\"200\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details> \n",
-    "\n",
-    "<summary>Hint </summary>\n",
-    "\n",
-    "$k = \\frac{\\Delta y}{\\Delta x} = \\frac{y_2 - y_1}{x_2 - x_1}$\n",
-    "\n",
-    "Either plug in one point into $y = kx + m$ and solve for $m$ or read the intersection with y-axis in the graph.\n",
-    "\n",
-    "[Video lecture][video_line] (Swedish)\n",
-    "\n",
-    "[video_line]: https://www.youtube.com/watch?v=9Buuq6rkaJ0\n",
-    "\n",
-    "</details>\n",
-    "<br>\n",
-    "<details> \n",
-    "\n",
-    "<summary>Solution </summary>\n",
-    "\n",
-    "```\n",
-    "k = 0.75, m = 1, so the equation for the slope is y = 0.75x + 1\n",
-    "```\n",
-    "\n",
-    "</details>\n"
+    "Compute the slope $k$ and the constant term $m$ of this line using the points $A: (4,4)$ and $B: (0,1)$.  \n"
    ]
   },
   {
@@ -365,34 +296,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> \n",
-    "\n",
-    "<summary>Hint </summary>\n",
-    "The formula is: \n",
-    "\n",
-    "$\\text{distance} = \\sqrt{(x_2-x_1)^2 +(y_2-y_1)^2}$\n",
-    "\n",
-    "[Video lecture][video_distance] (Swedish)\n",
-    "\n",
-    "[video_distance]: https://www.youtube.com/watch?v=DrTsKgHg7ng\n",
-    "\n",
-    "</details>\n",
-    "<br>\n",
-    "<details> \n",
-    "\n",
-    "<summary>Answer </summary>\n",
-    "\n",
-    "```\n",
-    "The distance is around 5.1 length units.\n",
-    "```\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Solution"
    ]
   },
@@ -427,26 +330,7 @@
     "## 6. Euclidean distance in 3D (**)\n",
     "\n",
     "Calculate the distance between the points $P_1: (2,1,4)$ and $P_2: (3,1,0)$ \n",
-    "\n",
-    "<details> \n",
-    "\n",
-    "<summary>Hint </summary>\n",
-    "\n",
-    "Let $p =(p_1, p_2, p_3)$ and $q = (q_1, q_2, q_3) \\Rightarrow$   \n",
-    "\n",
-    "$d(p,q) = \\sqrt{(p_1-q_1)^2 +(p_2-q_2)^2 +(p_3-q_3)^2 }$, where $d(p,q)$ is the Euclidean distance between $p$ and $q$\n",
-    "\n",
-    "</details>\n",
-    "<br>\n",
-    "<details> \n",
-    "\n",
-    "<summary>Answer </summary>\n",
-    "\n",
-    "```\n",
-    "The distance is around 4.12 l.u.\n",
-    "```\n",
-    "\n",
-    "</details>"
+    "\n"
    ]
   },
   {
