--- a/Exercises/02-While-Statement/02-while-statement-exercise.ipynb
+++ b/Exercises/02-While-Statement/02-while-statement-exercise.ipynb
@@ -207,13 +207,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yay! I guessed it in 13 attempts!\n"
+      "Invalid input, please try again!\n",
+      "Yay! I guessed your number 81 in 14 attempts!\n"
      ]
     }
    ],
    "source": [
     "try:    \n",
-    "    num = int(input(\"Please insert a number from 1 to 100!\"))\n",
+    "    input(\"Please think of a number from 1 to 100!\")\n",
     "\n",
     "    low = 1\n",
     "    high = 100\n",
@@ -224,13 +225,10 @@
     "    input(\"Press '.' when the number is correct!\")\n",
     "\n",
     "    while True:\n",
-    "        if low == high:\n",
-    "            print (f\"Your number must be {low}! I guessed it in {tries} attempts!\")\n",
-    "            break\n",
     "\n",
     "        guess = (low + high) //2\n",
     "\n",
-    "        answer = input (f\"Is your number {(guess):.0f} ?\")\n",
+    "        answer = input (f\"Is your number {guess} ?\")\n",
     "        if answer == \"+\":\n",
     "            low = guess + 1\n",
     "            tries += 1\n",
@@ -238,7 +236,7 @@
     "            high = guess -1\n",
     "            tries +=1\n",
     "        elif answer == \".\":\n",
-    "            print (f\"Yay! I guessed it in {tries} attempts!\")\n",
+    "            print (f\"Yay! I guessed your number {guess} in {tries} attempts!\")\n",
     "            break\n",
     "        \n",
     "        else: print(\"Invalid input, please try again!\")\n",
