--- a/Exercises/02-While-Statement/02-while-statement-exercise.ipynb
+++ b/Exercises/02-While-Statement/02-while-statement-exercise.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +196,13 @@
     "&nbsp; b) &nbsp; Half your testing number each time \n",
     "\n",
     "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Version 1 (The computer guesses your number)"
    ]
   },
   {
@@ -251,6 +258,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Version 2 (you guess the computer's number)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint\n",
+    "num = randint(1,100)\n",
+    "tries:0\n",
+    "\n",
+    "try:\n",
+    "    while True:\n",
+    "        guess = int(input(\"Try to guess the number between 1 and 100\"))\n",
+    "        if guess == 000: break\n",
+    "        if 0 > guess > 100:\n",
+    "            if guess == num:\n",
+    "                tries +=1\n",
+    "                print (\"Congrats you guessed {num} correctly in {tries} attempts!\")\n",
+    "                break\n",
+    "            elif guess < num:\n",
+    "                print (\"My number is higher than that!\")\n",
+    "            elif guess > num:\n",
+    "                print (\"My number is smaller than that!\")\n",
+    "        else: print (\"Seems like your number is not within the range! Try again!\")\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Please insert a valid number between 1 and 100\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "--- \n",
     "## 4. Multiplication game (*)\n",
     "&nbsp; a) &nbsp; Create a multiplication game following this flow chart: \n",
@@ -265,6 +308,126 @@
     "&nbsp; b) &nbsp; Add a menu for choosing difficulty level of the game\n",
     "\n",
     "&nbsp; c) &nbsp; Feel free to extend this program with features of your choice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random as rnd \n",
+    "import time\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "\n",
+    "  mode = input(\"Choose the game mode: \\n 1: Normal\\n 2: Hard\\n 3: Permadeath \\n 4: Time Battle \\n 0:Exit\")\n",
+    "  \n",
+    "  if mode == \"1\":\n",
+    "      input(\"Easy mode will start. Press Enter When Ready!\")\n",
+    "      rounds=0\n",
+    "      correct=0\n",
+    "\n",
+    "         \n",
+    "      while rounds < 10:\n",
+    "        num1=rnd.randint(1,10)\n",
+    "        num2=rnd.randint(1,10)\n",
+    "        try:\n",
+    "          answer = int(input(f\"{num1} * {num2} =\"))\n",
+    "        except ValueError: \n",
+    "          print(\"Enter a valid number\")\n",
+    "          continue\n",
+    "        if answer == (num1 * num2):\n",
+    "            print(\"Correct!\")\n",
+    "            correct +=1\n",
+    "        else: print (f\"Wrong! the right answer is {num1*num2}!\")\n",
+    "        rounds += 1\n",
+    "      input(f\"Your Score is {correct}!\")\n",
+    "      correct = 0\n",
+    "      \n",
+    "\n",
+    "  elif mode == \"2\":\n",
+    "     input(\"Hard mode will start. Press Enter When Ready!\")\n",
+    "     rounds = 0\n",
+    "     correct = 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "     while rounds < 10:\n",
+    "        num1=rnd.randint(1,100)\n",
+    "        num2=rnd.randint(1,100)\n",
+    "        try:\n",
+    "          answer = int(input(f\"{num1} * {num2} =\"))\n",
+    "        except ValueError: \n",
+    "           print(\"Enter a valid number\")\n",
+    "           continue\n",
+    "        if answer == (num1 * num2):\n",
+    "            print(\"Correct!\")\n",
+    "            correct +=1\n",
+    "        else: print (f\"Wrong! the right answer is {num1*num2}!\")\n",
+    "        rounds += 1\n",
+    "     input(f\"Your Score is {correct}!\")\n",
+    "    \n",
+    "\n",
+    "\n",
+    "  elif mode == \"3\":\n",
+    "     input(\"Permadeath mode will now start. The game will continue until you give a wrong answer. Press Enter When Ready!\")\n",
+    "     rounds = 0\n",
+    "     correct = 0\n",
+    "     errors = False\n",
+    "     \n",
+    "         \n",
+    "     while not errors:\n",
+    "         num1=rnd.randint(1,100)\n",
+    "         num2=rnd.randint(1,100)\n",
+    "         try:\n",
+    "          answer = int(input(f\"{num1} * {num2} =\"))\n",
+    "         except ValueError: \n",
+    "            print(\"Enter a valid number\")\n",
+    "            continue\n",
+    "         if answer == (num1 * num2):\n",
+    "             print(\"Correct!\")\n",
+    "             correct +=1\n",
+    "         else:\n",
+    "            print (f\"Wrong! the right answer is {num1*num2}!\")\n",
+    "            errors = True\n",
+    "         rounds += 1\n",
+    "         \n",
+    "     input(f\"Your Score is {correct}!\")\n",
+    "         \n",
+    "\n",
+    "\n",
+    "  elif mode == \"4\":\n",
+    "     input(\"Time Battle mode will start. Answer in the shortest time possible! Press Enter When Ready!\")\n",
+    "     rounds = 0\n",
+    "     correct = 0\n",
+    "     errors = False\n",
+    "     start = time.time()\n",
+    "         \n",
+    "     while not errors:\n",
+    "         num1=rnd.randint(1,100)\n",
+    "         num2=rnd.randint(1,100)\n",
+    "         \n",
+    "         try:\n",
+    "          answer = int(input(f\"{num1} * {num2} =\"))\n",
+    "         except ValueError: \n",
+    "            print(\"Enter a valid number\")\n",
+    "            continue\n",
+    "         if answer == (num1 * num2):\n",
+    "             print(\"Correct!\")\n",
+    "             correct +=1\n",
+    "         else:\n",
+    "            print (f\"Wrong! the right answer is {num1*num2}!\")\n",
+    "            errors = True\n",
+    "         rounds += 1\n",
+    "     end = time.time()\n",
+    "     elapsed = end - start\n",
+    "     print(f\"Your Score is {correct}!\")\n",
+    "     input(f\"Your Time is {elapsed:.2f} seconds!\")\n",
+    "\n",
+    "  elif mode == \"0\":\n",
+    "    break"
    ]
   },
   {
