Last 2 exercises of part 02 done

--- a/Exercises/02-While-Statement/02-while-statement-exercise.ipynb
+++ b/Exercises/02-While-Statement/02-while-statement-exercise.ipynb
@@ -296,9 +296,7 @@
    "source": [
     "--- \n",
     "## 4. Multiplication game (*)\n",
-    "&nbsp; a) &nbsp; Create a multiplication game following this flow chart: \n",
-    "\n",
-    "<img align=\"left\" src=\"../assets/Multiplication_game.png\" width=\"300\"/>"
+    "&nbsp; a) &nbsp; Create a multiplication game following this flow chart: \n"
    ]
   },
   {
@@ -308,6 +306,19 @@
     "&nbsp; b) &nbsp; Add a menu for choosing difficulty level of the game\n",
     "\n",
     "&nbsp; c) &nbsp; Feel free to extend this program with features of your choice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:\n",
+    "\n",
+    "The game has:\n",
+    "- **Base** multiplication game;\n",
+    "- **Difficulty Level** and Mode selection menu;\n",
+    "- **Survival Mode** - The game goes on until the player makes a mistake;\n",
+    "- **Time Battle Mode** - Like survival but the time is also counted."
    ]
   },
   {
@@ -322,7 +333,7 @@
     "\n",
     "while True:\n",
     "\n",
-    "  mode = input(\"Choose the game mode: \\n 1: Normal\\n 2: Hard\\n 3: Permadeath \\n 4: Time Battle \\n 0:Exit\")\n",
+    "  mode = input(\"Choose the game mode: \\n 1: Normal\\n 2: Hard\\n 3: Survival \\n 4: Time Battle \\n 0:Exit\")\n",
     "  \n",
     "  if mode == \"1\":\n",
     "      input(\"Easy mode will start. Press Enter When Ready!\")\n",
@@ -372,7 +383,7 @@
     "\n",
     "\n",
     "  elif mode == \"3\":\n",
-    "     input(\"Permadeath mode will now start. The game will continue until you give a wrong answer. Press Enter When Ready!\")\n",
+    "     input(\"Survival mode will now start. The game will continue until you give a wrong answer. Press Enter When Ready!\")\n",
     "     rounds = 0\n",
     "     correct = 0\n",
     "     errors = False\n",
@@ -400,7 +411,6 @@
     "\n",
     "  elif mode == \"4\":\n",
     "     input(\"Time Battle mode will start. Answer in the shortest time possible! Press Enter When Ready!\")\n",
-    "     rounds = 0\n",
     "     correct = 0\n",
     "     errors = False\n",
     "     start = time.time()\n",
@@ -420,11 +430,11 @@
     "         else:\n",
     "            print (f\"Wrong! the right answer is {num1*num2}!\")\n",
     "            errors = True\n",
-    "         rounds += 1\n",
     "     end = time.time()\n",
     "     elapsed = end - start\n",
-    "     print(f\"Your Score is {correct}!\")\n",
-    "     input(f\"Your Time is {elapsed:.2f} seconds!\")\n",
+    "     score = (correct/elapsed)*100\n",
+    "     print(f\"You answered {correct} times correctly in {elapsed:.2f} seconds!\")\n",
+    "     input (f\"Your final score is {score:.0f}! Press Enter to exit to the main menu.\")\n",
     "\n",
     "  elif mode == \"0\":\n",
     "    break"
@@ -453,6 +463,78 @@
     "&nbsp; b) &nbsp; $ 1 - \\frac{1}{3} + \\frac{1}{5} - \\frac{1}{7} + \\dots + \\frac{(-1)^n}{2n+1} \\xrightarrow[n\\rightarrow \\infty]{} \\frac{\\pi}{4}$\n",
     "\n",
     "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the partial sum 33 is 1.9999999997671694\n"
+     ]
+    }
+   ],
+   "source": [
+    "tot = 0 # Total sum ( I avoided using sum because it's an existing function)\n",
+    "n = 0 # Number of loops\n",
+    "num = 1 # Starting value\n",
+    "try:\n",
+    "    maxn = int(input(\"Enter 'n' value\"))\n",
+    "except ValueError:\n",
+    "    print (\"Please enter a valid number\")\n",
+    "\n",
+    "while n<maxn:\n",
+    "    tot = tot+num\n",
+    "    num = num/2\n",
+    "    n+= 1\n",
+    "print (f\"the partial sum {n} is {tot}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The partial sum 100 is 0.7828982258896384.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tot = 0\n",
+    "n = 0\n",
+    "try:\n",
+    "    maxn = int(input(\"Enter 'n' value\"))\n",
+    "except ValueError:\n",
+    "    print (\"Please enter a valid number\")\n",
+    "\n",
+    "\n",
+    "while n<maxn:\n",
+    "    num = (-1)**n/((2*n)+1)\n",
+    "    tot = tot+num\n",
+    "    n+=1\n",
+    "print (f\"The partial sum {n} is {tot}.\")"
    ]
   },
   {
