--- a/Exercises/05-strings/05-strings-exercise.ipynb
+++ b/Exercises/05-strings/05-strings-exercise.ipynb
@@ -141,6 +141,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The text 'Ni talar bra Latin' is a palyndrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input(\"Please enter the text you would like to check.\")\n",
+    "cleantxt = text.replace(\" \", \"\").lower()\n",
+    "if cleantxt == cleantxt[::-1]:\n",
+    "    print(f\"The text '{text}' is a palindrome\")\n",
+    "else: print(f\"The text '{text}' is not a palindrome\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "## 4. Vowels (**)\n",
     "\n",
@@ -162,6 +190,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your text has 9 vowels \n"
+     ]
+    }
+   ],
+   "source": [
+    "vowels = (\"aeiouäöå\")\n",
+    "text = input(\"Please enter the text to check!\")\n",
+    "count = 0\n",
+    "lowertxt = text.lower()\n",
+    "\n",
+    "for letter in lowertxt:\n",
+    "    if letter in vowels:\n",
+    "        count +=1\n",
+    "\n",
+    "print (f\"Your text has {count} vowels \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "## 5. Encryption (**)\n",
     "\n",
@@ -174,6 +235,62 @@
     "&nbsp; b) &nbsp; decrypt the message\n",
     "\n",
     "&nbsp; c) &nbsp; let the user choose either encryption or decryption."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mfu't uftu Uijt 1 Tdsjqu!\n",
+      "Let's test This 1 Script!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#I'll create a version of the alphabet which will allow me to check upper and lower case more easily\n",
+    "alfabet = \"aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZåÅäÄöÖ\"\n",
+    "while True:\n",
+    "    choice = input(\"Press 'E' to Encrypt, 'D' to decrypt. 'X' to exit\")\n",
+    "    if choice.lower() == \"x\":\n",
+    "        break\n",
+    "    text = input(\"Please enter the text.\")\n",
+    "    result =\"\"\n",
+    "    if choice.lower() == \"e\":\n",
+    "        for letter in text:\n",
+    "            if letter in alfabet:\n",
+    "                char = alfabet.index(letter)\n",
+    "                newindex = (char+2)%58\n",
+    "                result += alfabet[newindex]\n",
+    "            else:\n",
+    "                result += letter\n",
+    "    \n",
+    "\n",
+    "    elif choice.lower() == \"d\":\n",
+    "        for letter in text:\n",
+    "            if letter in alfabet:\n",
+    "                char = alfabet.index(letter)\n",
+    "                newindex = (char-2)%58\n",
+    "                result += alfabet[newindex]\n",
+    "            else:\n",
+    "                result += letter\n",
+    "    \n",
+    "    \n",
+    "    else: print(\"Please select a valid choice.\")\n",
+    "\n",
+    "\n",
+    "    print (result)"
    ]
   },
   {
