Exercises 06 partially done

--- a/Exercises/03-For-statement/03-for-statement-exercise.ipynb
+++ b/Exercises/03-For-statement/03-for-statement-exercise.ipynb
@@ -385,6 +385,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I guessed number 6748 correctly in 5749 attempts\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rnd\n",
+    "num = rnd.randint(1000,9999) \n",
+    "for n in range (1000, 10000): \n",
+    "    if n == num: \n",
+    "        print(f\"I guessed number {num} correctly in {n-1000+1} attempts\") \n",
+    "        break"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -409,6 +431,25 @@
     "```\n",
     "\n",
     "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18446744073709551615\n"
+     ]
+    }
+   ],
+   "source": [
+    "rice = 1 \n",
+    "for n in range (1,65): rice = rice*2 \n",
+    "print (rice-1)"
    ]
   },
   {
@@ -446,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.7"
   },
   "orig_nbformat": 4
  },
